2002-10-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b13

	* Changed php_flag to php_value in the config wizard code.
	  The PHP website claims that php_flag is legitimate, but some versions
	  of PHP don't support it.  

2002-10-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b12

	* Added .swf (Shockwave) as an acceptable movie format

	* SECURITY: remove tags from the login name and password on the
	  login page to protect against cross-site-scripting attacks.
	  Thanks to Bryan Burns for the tip.

2002-09-27  Tim Miller  <tim_miller@users.sourceforge.net> 1.3.2-cvs-b11

        * Added gallery_remote2.php and supporting files, which implement
	  the first release of the new Gallery Remote protocol,
	  to be used with GR 1.0-b9 and later.

2002-09-27  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b10

	* Fixed a bug in the comment code that caused the IP not to appear
	  when register_globals is off

	* Changed the comment display code so that it only shows the IP to
	  administrators. 

2002-09-23  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b9

	* Overhauled the UPGRADING document; it was getting pretty confusing

	* Rolled in Sammy Spets' "can view full images" permission patch

	* Changed the captionator to only require canChangeTextOfAlbum
	  permissions (used to require canWrite).

2002-09-18  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b8

	* Fixed a bug in the ImageMagick code where it was rotating images the
	  wrong direction.

2002-09-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b7

	* Added setup/check_imagemagick.php (forgot to do it as part of -b6)

2002-09-14  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b6

	* Gallery now supports ImageMagick, thanks to a patch from Vallimar!

2002-09-10  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b5

	* Converted from short php tags to long php tags, thanks to a very
	  large patch from Chris Ricker <kaboom@gatech.edu>
