@@ -1,3 +1,9 @@
+2002-10-18  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b14
+
+	* Enhanced the config wizard to behave reasonably when open_basedir is
+	  on.  Specifically I improved it so that it doesn't spit out endless
+	  warnings by trying to stat files that are not in the open_basedir list.
+
 2002-10-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b13
 
 	* Changed php_flag to php_value in the config wizard code.
